# oxia-client-python

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  gen-proto.sh  pydoctor.ini  pyproject.toml
.github/workflows/: publish-docs.yaml  pypi-release.yaml  run-tests.yaml
oxia/: __init__.py  api.py  client.py  client_test.py  connection_pool.py  defs.py  ex.py  notifications.py  service_discovery.py  sessions.py  simple_test.py
oxia/internal/: compare.py  connection_pool.py  notifications.py  oxia_container.py  sequence_updates.py  service_discovery.py  sessions.py
oxia/internal/proto/io/streamnative/oxia/proto/: __init__.py
oxia/proto/io/streamnative/oxia/proto/: __init__.py
src/oxia/: __init__.py  auth.py  client.py  defs.py  ex.py
src/oxia/internal/: __init__.py  backoff.py  compare.py  connection_pool.py  interceptors.py  notifications.py  oxia_container.py  sequence_updates.py  service_discovery.py  sessions.py
tests/: auth_test.py  check_status_test.py  client_test.py  client_unit_test.py  compare_test.py  connection_pool_test.py  notifications_test.py  request_timeout_test.py  sequence_updates_test.py  service_discovery_test.py  sessions_test.py  tls_test.py
