# Copyright 2025 The Oxia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "oxia"
description = "Oxia client for Python"
authors = [
    { name = "StreamNative"}
]
dynamic = ["version"]

requires-python = ">=3.10"

dependencies = [
    "betterproto2-compiler",
    "grpcio",
    "xxhash",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.1",
    "pydoctor>=25.10.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.13.1",
]

[build-system]
requires = [
    "uv_build>=0.8.22,<0.9.0",
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source = ["oxia"]
omit = ["src/oxia/internal/proto/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
