# Copyright 2025 The Oxia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "oxia"
description = "Python client for Oxia, a scalable metadata store and coordination system"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "The Oxia Authors"}
]
dynamic = ["version"]

requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "betterproto2-compiler",
    "grpcio",
    "xxhash",
]

[project.urls]
Homepage = "https://oxia-db.github.io/"
Documentation = "https://oxia-db.github.io/oxia-client-python/latest/"
Repository = "https://github.com/oxia-db/oxia-client-python"
Issues = "https://github.com/oxia-db/oxia-client-python/issues"

[dependency-groups]
dev = [
    "grpcio-tools>=1.75.1",
    "pydoctor>=25.10.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.13.1",
]

[build-system]
requires = [
    "uv_build>=0.8.22,<0.9.0",
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source = ["oxia"]
omit = ["src/oxia/internal/proto/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
